fix: update form control outline for improved visibility and styling consistency

--- a/themes/guardrail-theme/login/resources/css/login.css
+++ b/themes/guardrail-theme/login/resources/css/login.css
@@ -472,7 +472,7 @@ span.pf-v5-c-form-control__utilities {
     text-align: center !important;
     width: 100% !important;
     box-shadow: none !important;
-    border: 2px solid transparent !important;
+    outline: 1px solid !important;
     border-image: linear-gradient(90deg, #9EC0FA 0%, #C4ADFA 100%) 1 !important;
     background: none !important;
     color: #9155A2 !important;
